--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": false,
-    "preserveConstEnums": true
-  }
+    "preserveConstEnums": true,
+    "baseUrl": "./src",
+    "paths": {
+      "*": [
+        "types/*",
+        "*"
+      ]
+    }
+  },
 }
