mass refactor stage 2 of 4

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,7 @@
 CONTENTFUL_SPACE_ID=s0zztu9gjury
 CONTENTFUL_ACCESS_TOKEN=2WIh0ICCnUn-rFmvPhvCaB0SiAq6gl0Gt3DZblM57Ko
 GATSBY_GOOGLE_ANALYTICS_ID=G-QHX9K2WYBJ
-MAILCHIMP_ENDPOINT=https://gmail.us20.list-manage.com/subscribe/post?u=041794295b67fd11f7a444e14&amp;id=a1afdb19e
+MAILCHIMP_ACTION=https://gmail.us20.list-manage.com/subscribe/post?u=041794295b67fd11f7a444e14&amp;id=a1afdb19e
+MAILCHIMP_NAME=
+MAILCHIMP_ID=
 NODE_ENV=development
