--- a/package.json
+++ b/package.json
@@ -34,11 +34,10 @@
   "dependencies": {
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
-    "axios": "^0.21.1",
     "cssnano": "4.1.10",
     "emotion": "11.0.0",
     "emotion-server": "11.0.0",
-    "gatsby": "2.29.1",
+    "gatsby": "2.29.2",
     "gatsby-image": "2.8.0",
     "gatsby-plugin-canonical-urls": "2.7.0",
     "gatsby-plugin-emotion": "5.1.0",
@@ -49,39 +48,35 @@
     "gatsby-plugin-postcss": "3.4.0",
     "gatsby-plugin-react-helmet": "3.7.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
-    "gatsby-plugin-sharp": "2.11.1",
+    "gatsby-plugin-sharp": "2.11.2",
     "gatsby-plugin-sitemap": "2.9.0",
     "gatsby-plugin-typegen": "^2.2.2",
     "gatsby-plugin-typescript": "2.9.0",
     "gatsby-plugin-webfonts": "^1.1.3",
     "gatsby-remark-abbr": "2.0.0",
     "gatsby-remark-copy-linked-files": "2.7.0",
-    "gatsby-remark-images": "3.8.0",
+    "gatsby-remark-images": "3.8.1",
     "gatsby-remark-images-zoom": "^1.1.0",
     "gatsby-remark-responsive-iframe": "2.8.0",
     "gatsby-remark-smartypants": "2.7.0",
-    "gatsby-source-contentful": "^4.3.0",
-    "gatsby-source-filesystem": "2.8.0",
+    "gatsby-source-contentful": "^4.3.1",
+    "gatsby-source-filesystem": "2.8.1",
     "gatsby-transformer-json": "2.8.0",
-    "gatsby-transformer-remark": "2.13.0",
+    "gatsby-transformer-remark": "2.13.1",
     "gatsby-transformer-sharp": "2.9.0",
-    "immer": "^8.0.0",
-    "lodash": "4.17.20",
     "normalize.css": "8.0.1",
     "polished": "4.0.5",
     "postcss-color-function": "4.1.0",
     "prism-themes": "1.5.0",
-    "prismjs": "1.22.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-emotion": "10.0.0",
     "react-helmet": "6.1.0",
-    "rehype-react": "6.1.0",
-    "use-immer": "^0.4.2"
+    "rehype-react": "6.1.0"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.165",
-    "@types/node": "14.14.14",
+    "@types/lodash": "4.14.166",
+    "@types/node": "14.14.16",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-helmet": "6.1.0",
