--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "private": false,
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop --log-pages",
+    "clean": "gatsby clean",
+    "develop": "gatsby develop --verbose",
     "develop_lazy": "gatsby clean && GATSBY_EXPERIMENTAL_LAZY_DEVJS=true gatsby develop",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "eslint --fix --ext .js,.ts,.tsx .",
