--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "gatsby-plugin-feed": "2.10.0",
     "gatsby-plugin-global-styles": "^1.0.17",
     "gatsby-plugin-google-tagmanager": "^2.8.0",
+    "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-netlify": "^2.8.0",
+    "gatsby-plugin-offline": "^3.7.1",
     "gatsby-plugin-postcss": "3.4.0",
     "gatsby-plugin-react-helmet": "3.7.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
