prepare to deploy

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,7 @@ MAILCHIMP_ACTION=https://gmail.us20.list-manage.com/subscribe/post?u=041794295b6
 MAILCHIMP_NAME=
 MAILCHIMP_ID=
 NODE_ENV=development
+COMMENTBOX_ID=5709731544956928-proj
+GATSBY_ALGOLIA_APP_ID=<App ID>
+GATSBY_ALGOLIA_SEARCH_KEY=<Search-Only API Key>
+ALGOLIA_ADMIN_KEY=<Admin API Key>
