--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,8 @@ GATSBY_GOOGLE_ANALYTICS_ID=G-QHX9K2WYBJ
 MAILCHIMP_ACTION=https://gmail.us20.list-manage.com/subscribe/post?u=041794295b67fd11f7a444e14&amp;id=a1afdb19e
 MAILCHIMP_NAME=
 MAILCHIMP_ID=
-NODE_ENV=development
+NODE_ENV=production
+COMMENTBOX_ID=5709731544956928-proj
+GATSBY_ALGOLIA_APP_ID=<App ID>
+GATSBY_ALGOLIA_SEARCH_KEY=<Search-Only API Key>
+ALGOLIA_ADMIN_KEY=<Admin API Key>
