--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
   "dependencies": {
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
+    "commentbox.io": "^2.0.0",
     "cssnano": "4.1.10",
     "emotion": "11.0.0",
     "emotion-server": "11.0.0",
     "gatsby": "2.29.2",
     "gatsby-image": "2.8.0",
+    "gatsby-plugin-algolia": "^0.16.2",
     "gatsby-plugin-canonical-urls": "2.7.0",
     "gatsby-plugin-emotion": "5.1.0",
     "gatsby-plugin-feed": "2.10.0",
