--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
+    "algoliasearch": "^4.8.3",
     "commentbox.io": "^2.0.0",
     "cssnano": "4.1.10",
     "emotion": "11.0.0",
@@ -72,6 +73,8 @@
     "react-dom": "17.0.1",
     "react-emotion": "10.0.0",
     "react-helmet": "6.1.0",
+    "react-instantsearch-dom": "^6.8.2",
+    "react-share": "^4.3.1",
     "rehype-react": "6.1.0"
   },
   "devDependencies": {
