--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
     "algoliasearch": "^4.8.3",
-    "commentbox.io": "^2.0.0",
     "cssnano": "4.1.10",
     "emotion": "11.0.0",
     "emotion-server": "11.0.0",
@@ -44,6 +43,7 @@
     "gatsby-image": "2.8.0",
     "gatsby-plugin-algolia": "^0.16.2",
     "gatsby-plugin-canonical-urls": "2.7.0",
+    "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-emotion": "5.1.0",
     "gatsby-plugin-global-styles": "^1.0.17",
     "gatsby-plugin-google-tagmanager": "^2.8.0",
@@ -82,8 +82,8 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-helmet": "6.1.0",
-    "@typescript-eslint/eslint-plugin": "4.11.0",
-    "@typescript-eslint/parser": "4.11.0",
+    "@typescript-eslint/eslint-plugin": "4.11.1",
+    "@typescript-eslint/parser": "4.11.1",
     "eslint": "7.16.0",
     "eslint-config-xo-react": "0.23.0",
     "eslint-config-xo-space": "0.25.0",
