--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-plugin-canonical-urls": "2.7.0",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-emotion": "5.1.0",
+    "gatsby-plugin-feed": "^2.10.0",
     "gatsby-plugin-global-styles": "^1.0.17",
     "gatsby-plugin-google-tagmanager": "^2.8.0",
     "gatsby-plugin-manifest": "^2.9.1",
@@ -54,6 +55,7 @@
     "gatsby-plugin-react-helmet": "3.7.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
     "gatsby-plugin-sharp": "2.11.2",
+    "gatsby-plugin-sitemap": "^2.9.0",
     "gatsby-plugin-typescript": "2.9.0",
     "gatsby-remark-abbr": "2.0.0",
     "gatsby-remark-copy-linked-files": "2.7.0",
@@ -62,7 +64,6 @@
     "gatsby-remark-smartypants": "2.7.0",
     "gatsby-source-contentful": "^4.3.1",
     "gatsby-source-filesystem": "2.8.1",
-    "gatsby-transformer-json": "2.8.0",
     "gatsby-transformer-remark": "2.13.1",
     "gatsby-transformer-sharp": "2.9.0",
     "normalize.css": "8.0.1",
@@ -89,6 +90,7 @@
     "eslint-config-xo-space": "0.25.0",
     "eslint-config-xo-typescript": "0.37.0",
     "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "typescript": "4.1.3"
