--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,8 @@
 CONTENTFUL_SPACE_ID=s0zztu9gjury
 CONTENTFUL_ACCESS_TOKEN=2WIh0ICCnUn-rFmvPhvCaB0SiAq6gl0Gt3DZblM57Ko
 GATSBY_GOOGLE_ANALYTICS_ID=G-QHX9K2WYBJ
-MAILCHIMP_ACTION=https://gmail.us20.list-manage.com/subscribe/post?u=041794295b67fd11f7a444e14&amp;id=a1afdb19e
-MAILCHIMP_NAME=
-MAILCHIMP_ID=
+MAILCHIMP_ENDPOINT=https://addict.us7.list-manage.com/subscribe/post?u=dca46577e9e219f99c6be70e3&amp;id=3fb65cd48a
 NODE_ENV=development
-COMMENTBOX_ID=5709731544956928-proj
 ALGOLIA_APP_ID=Q33X7ZS6BE
 ALGOLIA_SEARCH_KEY=8c9b26292bf92774976223f70aa84338
 ALGOLIA_ADMIN_KEY=1fc53703cd8d9cf9e7a2adae055e2ad5
