--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
+    "@typeform/embed": "^0.31.1",
     "algoliasearch": "^4.8.3",
     "cssnano": "4.1.10",
     "emotion": "11.0.0",
@@ -80,7 +81,7 @@
   },
   "devDependencies": {
     "@types/lodash": "4.14.166",
-    "@types/node": "14.14.16",
+    "@types/node": "14.14.17",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-helmet": "6.1.0",
