--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "gatsby": "2.29.3",
     "gatsby-image": "2.8.0",
     "gatsby-plugin-algolia": "^0.16.2",
-    "gatsby-plugin-canonical-urls": "2.7.0",
+    "gatsby-plugin-canonical-urls": "^2.7.0",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-emotion": "5.1.0",
     "gatsby-plugin-feed": "^2.10.0",
