--- a/.github/main.yml
+++ b/.github/main.yml
@@ -1,41 +1,43 @@
-# on: 
-#   push
+on:
+  push:
+  pull_request:
 
-# name: CI fetch.build => vercel
+name: CI fetch.build => vercel
 
-# jobs:
-#   build:
-#     name: build Gatsby app
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: actions/setup-node@v1
-#         with:
-#           node-version: 12
+jobs:
+  build:
+    name: build Gatsby app
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
 
-#       - run: yarn install --pure-lockfile
-#         name: install deps
+      - run: yarn install --pure-lockfile
+        name: install deps
 
-#       - run: yarn gatsby clean && node postinstall.js &&yarn gatsby build --log-pages
-#         name: build app
-#         env:
-#           NODE_ENV: production
-#           ENVIRONMENT: ${{ contains(github.ref, 'master') && 'production' || 'staging'}}
-#           GATSBY_GOOGLE_ANALYTICS_ID: ${{ secrets.GATSBY_GOOGLE_ANALYTICS_ID }}
-#           GATSBY_APPLLO_GRAPHQL_ENDPOINT: ${{ secrets.GATSBY_APPLLO_GRAPHQL_ENDPOINT }}
-#           GATSBY_OPENSTREETMAP_STATIC_TILES_ENDPOINT: ${{ secrets.GATSBY_OPENSTREETMAP_STATIC_TILES_ENDPOINT }}
-#           GATSBY_ARCGISONLINE_STATIC_TILES_ENDPOINT: ${{ secrets.GATSBY_ARCGISONLINE_STATIC_TILES_ENDPOINT }}
+      - run: yarn gatsby clean &&yarn gatsby build --log-pages
+        name: build app
+        env:
+          NODE_ENV: production
+          ENVIRONMENT: ${{ contains(github.ref, 'master') && 'production' || 'staging'}}
+          CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
+          CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
+          MAILCHIMP_ENDPOINT: ${{ secrets.MAILCHIMP_ENDPOINT }}
+          ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
+          ALGOLIA_SEARCH_KEY: ${{ secrets.ALGOLIA_SEARCH_KEY }}
+          ALGOLIA_ADMIN_KEY: ${{ secrets.ALGOLIA_ADMIN_KEY }}
+          ALGOLIA_INDEX_NAME: ${{ secrets.ALGOLIA_INDEX_NAME }}
 
-#   deploy:
-#     name: deploy to Vercel
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: amondnet/vercel-action@v19
-#         with:
-#           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-#           github-token: ${{ secrets.ACCESS_TOKEN }}
-#           vercel-args: '--prod'
-#           vercel-org-id: ${{ secrets.ORG_ID}}
-#           vercel-project-id: ${{ secrets.PROJECT_ID}}
-#           working-directory: ./
+  deploy:
+    name: deploy to Vercel
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: amondnet/vercel-action@v19
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          github-token: ${{ secrets.ACCESS_TOKEN }}
+          vercel-args: '--prod'
+          working-directory: ./
