--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,5 +39,7 @@ jobs:
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.ACCESS_TOKEN }}
+          vercel-org-id: ${{ secrets.ORG_ID}}
+          vercel-project-id: ${{ secrets.PROJECT_ID}}
           vercel-args: '--prod'
           working-directory: ./
